[package]
name = "rama-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
thiserror = "1.0" 
url = "2.5"
log = "0.4"
env_logger = "0.11" 